# uroko

./: LICENSE  README.md  pyproject.toml
.circleci/: config.yml
tests/: test_cli.py  test_uroko.py
uroko/: __init__.py  cli.py
